Closed Bug 1171496 Opened 10 years ago Closed 10 years ago

crash in mozilla::gmp::GMPParent::ChildTerminated()

Categories

(Core :: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox39 + fixed
firefox40 + fixed
firefox41 --- fixed

People

(Reporter: adalucinet, Assigned: cpearce)

Details

(Keywords: crash)

Crash Data

Attachments

(3 files)

This bug was filed from the Socorro interface and is report bp-9f896f96-44e5-4c04-ae13-2b7942150604. ============================================================= Crash encountered while closing Firefox (38.0.5 build 4 and latest 41.0a1) after performing some calls via CiscoSparks webapp (https://web.ciscospark.com): bp-9f896f96-44e5-4c04-ae13-2b7942150604 bp-9d3aa3cb-9178-40d1-9c8f-3b8e32150604 More reports: https://crash-stats.mozilla.com/signature/?signature=mozilla%3A%3Agmp%3A%3AGMPParent%3A%3AChildTerminated%28%29&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&page=1
Ethan - I think this is a dup of a bug you had a wallpaper patch for; am I correct?
Flags: needinfo?(ethanhugg)
Priority: -- → P1
I think this is different. It looks like what I encountered in bug 1169129, which I fixed in https://bugzilla.mozilla.org/attachment.cgi?id=8615089 .
To me this does look the same as what I wallpapered in bug 1163239 which is only in FF41. The report sounds like it is on shutdown after a successful Spark call.
Flags: needinfo?(ethanhugg)
(In reply to Chris Pearce (:cpearce) from comment #2) > I think this is different. It looks like what I encountered in bug 1169129, > which I fixed in https://bugzilla.mozilla.org/attachment.cgi?id=8615089 . Can we try that again in current nightly, since cpearce's patch landed on 6/5 in m-c? If the problem is gone in Nightly, let's try a build of 39 with and without the patch (https://bugzilla.mozilla.org/attachment.cgi?id=8615089). If we have confirmation this resolves the problem, let's get it uplifted to 40 and 39 if possible.
Flags: needinfo?(alexandra.lucinet)
(In reply to Randell Jesup [:jesup] from comment #4) > (In reply to Chris Pearce (:cpearce) from comment #2) > > I think this is different. It looks like what I encountered in bug 1169129, > > which I fixed in https://bugzilla.mozilla.org/attachment.cgi?id=8615089 . > > Can we try that again in current nightly, since cpearce's patch landed on > 6/5 in m-c? Unable to reproduce the crash with latest Nightly (from 2015-06-08).
Flags: needinfo?(alexandra.lucinet)
Chris: can you spin a try build for adalucient to verify in 39, and if it verifies this fixes it mark for uplift? thanks.
Flags: needinfo?(cpearce)
(In reply to Randell Jesup [:jesup] from comment #6) > Chris: can you spin a try build for adalucient to verify in 39, and if it > verifies this fixes it mark for uplift? thanks. Sure. I was hoping to uplift all of bug 1169129, but there have been e10s related regressions and edge cases which have delayed it. Alexandra, can you please test this build, it should be complete by the time you start work: https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/try-builds/cpearce@mozilla.com-6a0350749420
Flags: needinfo?(cpearce)
Flags: needinfo?(cpearce)
(In reply to Chris Pearce (:cpearce) from comment #7) > Alexandra, can you please test this build, it should be complete by the time > you start work: > https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/try-builds/ > cpearce@mozilla.com-6a0350749420 I confirm that with the provided try build, the crash is no longer reproducible after performing various calls. Tested with CiscoSparks webapp, under Windows 7 64-bit and Ubuntu 14.04 64-bit, and the CiscoSparks native client on Mac OS X 10.9.5 (because no build was available for OS X).
Bringing Bug 1169129 patch 5 over here, so that we can keep the uplift flags in Bug 1169129 for the other patches in Bug 1169129, and use the flags in this bug to track the issue this bug cares about; the crash.
Attachment #8623303 - Flags: review+
Assignee: nobody → cpearce
Comment on attachment 8623303 [details] [diff] [review] Bug 1169129 Patch 5: Make GMPParent hold a self ref while child process is alive (This is Bug 1169129 patch 5, but I'm requesting uplift in this bug as the rest of the patches in Bug 1169129 are not ready to be uplifted, and I *do* want to uplift the rest of the patches in Bug 1169129 so I don't want Bug 1169129's flags to be marked as fixed in aurora/beta when all the patches aren't uplifted.) Approval Request Comment [Feature/regressing bug #]: WebRTC with OpenH264 and EME [User impact if declined]: There are some cases when using EME and OpenH264 where Firefox can crash on shutdown; this patch fixes that. [Describe test coverage new/current, TreeHerder]: We have lots of EME and OpenH264 tests, and a few of the gtests we had were failing without this patch (particularly with the other patches in bug 1169129 applied). [Risks and why]: We're messing with object life cycles here, so there's always some risk when you do that. However this patch lengthens the object's life, not shortens it, and this patch has been on Nightly for a couple of weeks, so I think it's safe enough. [String/UUID change made/needed]: None
Attachment #8623303 - Flags: approval-mozilla-beta?
Attachment #8623303 - Flags: approval-mozilla-aurora?
[Tracking Requested - why for this release]: Since this is an OpenH264/WebRTC and EME crash, we should track this to ensure it doesn't slip through the cracks.
Comment on attachment 8623303 [details] [diff] [review] Bug 1169129 Patch 5: Make GMPParent hold a self ref while child process is alive Approved for uplift to aurora and beta; WebRTC/EME shutdown crash fix.
Attachment #8623303 - Flags: approval-mozilla-beta?
Attachment #8623303 - Flags: approval-mozilla-beta+
Attachment #8623303 - Flags: approval-mozilla-aurora?
Attachment #8623303 - Flags: approval-mozilla-aurora+
Flags: needinfo?(cpearce)
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: