Bug 1171496 - Make GMPParent hold a self ref while GMP child process is alive. a=lizzard