dom/media/gmp/GMPParent.cpp
@@ -65,6 +65,7 @@ GMPParent::GMPParent()
 #ifdef PR_LOGGING
   , mChildPid(0)
 #endif
+  , mHoldingSelfRef(false)
 {
   LOGD("GMPParent ctor");
   mPluginId = GeckoChildProcessHost::GetUniqueID();
@@ -75,6 +76,8 @@ GMPParent::~GMPParent()
   // Can't Close or Destroy the process here, since destruction is MainThread only
   MOZ_ASSERT(NS_IsMainThread());
   LOGD("GMPParent dtor");
+  
+  MOZ_ASSERT(!mProcess);
 }
 
 nsresult
@@ -180,6 +183,13 @@ GMPParent::LoadProcess()
   }
 
   mState = GMPStateLoaded;
+
+  // Hold a self ref while the child process is alive. This ensures that
+  // during shutdown the GMPParent stays we stay alive long enough to
+  // terminate the child process.
+  MOZ_ASSERT(!mHoldingSelfRef);
+  mHoldingSelfRef = true;
+  AddRef();
 
   return NS_OK;
 }
@@ -401,6 +411,10 @@ GMPParent::DeleteProcess()
     new NotifyGMPShutdownTask(NS_ConvertUTF8toUTF16(mNodeId)),
     NS_DISPATCH_NORMAL);
 
+  if (mHoldingSelfRef) {
+    Release();
+    mHoldingSelfRef = false;
+  }
 }
 
 GMPState
